# In-Memory-Executable-Loader

./: .gitignore  CMakeLists.txt  CONTRIBUTING  LICENSE  README.md  build.sh
src/: elf_loader.c  main.c  pe_loader.c
src/include/: errors.h  loader.h  macros.h  structs.h  structs_linux.h  structs_windows.h
